<resources>
    <string name="app_name">DogTunnel</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_user_name">Username</string>
    <string name="pref_default_user_name">admin</string>

    <string name="pref_title_pass">Password</string>

    <string name="pref_title_dns_server">DNS Server</string>
    <string name="pref_title_dns_server_def">8.8.8.8</string>
    <string name="pref_title_address">Server address</string>
    <string name="pref_title_route">Route</string>
    <string name="pref_route_def">0.0.0.0/0</string>

    <string name="header_logcat">Logcat</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="msg_log_copied">Log copied.</string>
    <string name="addr_range_example">172.26.32.%d</string>
    <string name="addr_range_text">Server range</string>
    <string name="addr_server_text">Server address</string>

    <string name="pref_header_about">About</string>
    <string name="button_OK">OK</string>
    <string name="button_FIND">FIND</string>
    <string name="pattern_text">Find pattern</string>
    <string name="find_notfound">Server with pattern not found</string>

</resources>
